turn on jvm cg mem args